<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_mv"
    tools:context=".detail.DetailActivity">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="8dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_box"
                android:layout_width="match_parent"
                android:layout_height="280dp"
                tools:ignore="MissingConstraints">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/bg_mv">

                    <ImageView
                        android:id="@+id/iv_backdrop"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="fitXY"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        tools:ignore="ContentDescription" />

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/tv_title_detail"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_marginEnd="16dp"
                            android:layout_marginBottom="4dp"
                            android:fontFamily="@font/cherry_cream_soda"
                            android:shadowColor="@color/black"
                            android:shadowRadius="1.8"
                            android:textColor="@color/white"
                            android:textSize="24sp"
                            android:textStyle="bold|italic"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@id/roundedImageView"
                            tools:text="@string/title" />


                        <View
                            android:id="@+id/roundedImageView"
                            android:layout_width="140dp"
                            android:layout_height="200dp"
                            android:layout_marginStart="16dp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="parent" />

                        <com.google.android.material.floatingactionbutton.FloatingActionButton
                            android:id="@+id/fab_favo_detail"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:layout_marginEnd="16dp"
                            android:layout_marginBottom="8dp"
                            android:contentDescription="@string/favorite"
                            android:src="@drawable/ic_baseline_favorite_border_24"
                            app:fabSize="mini"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:tint="@android:color/black" />

                        <androidx.cardview.widget.CardView
                            android:id="@+id/cv_score"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_marginTop="16dp"
                            android:layout_marginEnd="20dp"
                            android:layout_marginBottom="16dp"
                            android:elevation="4dp"
                            app:cardCornerRadius="20dp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/fab_favo_detail">

                            <androidx.coordinatorlayout.widget.CoordinatorLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:background="@color/teal_200">

                                <TextView
                                    android:id="@+id/tv_score"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:contentDescription="@string/score"
                                    android:gravity="center"
                                    android:textColor="@android:color/black"
                                    android:textSize="14sp"
                                    tools:text="77%" />
                            </androidx.coordinatorlayout.widget.CoordinatorLayout>

                        </androidx.cardview.widget.CardView>
                    </androidx.constraintlayout.widget.ConstraintLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/poster_detail"
                android:layout_width="140dp"
                android:layout_height="210dp"
                android:layout_marginStart="16dp"
                android:elevation="8dp"
                android:scaleType="fitXY"
                android:src="@drawable/bg_card"
                app:layout_constraintBottom_toBottomOf="@+id/cv_box"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cv_box"
                app:riv_corner_radius="12dp" />

            <LinearLayout
                android:id="@+id/LY1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"

                android:layout_marginEnd="16dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/poster_detail"
                app:layout_constraintTop_toBottomOf="@id/cv_box">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_release"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:textStyle="italic|bold"
                        tools:text="@tools:sample/date/ddmmyy" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/language"
                        android:textColor="@color/white" />

                    <TextView
                        android:id="@+id/tv_language"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:textColor="@color/white"
                        tools:text="En" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/popularity"
                        android:textColor="@color/white" />

                    <TextView
                        android:id="@+id/tv_popularity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:textColor="@color/white"
                        tools:text="10000" />

                </LinearLayout>

            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_overview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/poster_detail">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/bg_card"
                    android:padding="6dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/overview"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_text_overview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cv_overview">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/bg_card"
                    android:padding="8dp">

                    <TextView
                        android:id="@+id/tv_overview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="@tools:sample/lorem/random" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>